syntax = "proto3";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
package coresamples_service;

option go_package = "./proto;coresamples_service";

service SettingService{
  rpc CreateOrUpdateClinicSetting(CreateClinicSettingRequest) returns (CreateClinicSettingResponse){}
  rpc GetClinicSetting(GetClinicSettingRequest) returns (GetSettingResponse){}
  rpc GetAllSetting(GetAllSettingRequest) returns (GetSettingResponse){}
  rpc UpdateMemberSetting(UpdateMemberSettingRequest) returns (GetSettingResponseUpdateMemberSetting){}
  rpc GetCustomerIDbySettingResult(GetIDbySettingResultRequest) returns (GetCustomerIDbySettingResultResonse){}
  rpc GetClinicIDbySettingResult(GetIDbySettingResultRequest) returns (GetClinicIDbySettingResultResonse){}
  rpc GetSettingByCustomerClinic(GetSettingByCustomerClinicRequest) returns (GetSettingResponse){}
  rpc EditCustomerClinicSettings(EditCustomerClinicSettingsRequest) returns (EditCustomerClinicSettingsResponse){}
  rpc GetSettingByCustomerClinicSettingGroup(GetSettingByCustomerClinicSettingGroupRequest) returns (GetSettingResponse){}

}

message GetSettingByCustomerClinicSettingGroupRequest{
  int32 customer_id = 1;
  int32 clinic_id = 2;
  string setting_group_name = 3;
}

message GetIDbySettingResultRequest{
  repeated string settingResultList = 1;
}

message CustomerInClinic{
  string customer_id = 1;
  string clinic_id = 2;
}

message GetCustomerIDbySettingResultResonse{
  repeated CustomerInClinic customer_in_clinic = 1;
}

message GetClinicIDbySettingResultResonse{
  repeated string clinic_id = 1;
}

message UpdateMemberSettingRequest{
  int32 setting_id = 1;
  string setting_name = 2;
  string setting_group = 3;
  string setting_description = 4;
  string setting_value = 5;
  string setting_type = 6;
  bool isActive = 7;
  bool hasGroupSetting = 8;
  bool isGroupSetting = 9;
  bool useGroupSetting = 10;
  bool isRequiredSetting = 11;
  int32 setting_level = 12;
  string setting_level_name = 13;
}

message GetSettingResponse{
  repeated FullSetting result = 1;
  string message = 2;
}
message GetSettingResponseUpdateMemberSetting{
  FullSetting result = 1;
}

message FullSetting{
  int32 setting_id = 1;
  string setting_name = 2;
  string setting_group = 3;
  string setting_description = 4;
  string setting_value = 5;
  string setting_type = 6;
  string setting_value_updated_time = 7;
  bool isActive = 8;
  bool hasGroupSetting = 9;
  bool isGroupSetting = 10;
  bool useGroupSetting = 11;
  bool isRequiredSetting = 12;
  int32 setting_level = 13;
  string setting_level_name = 14;
  int32 group_setting_id = 15;
  bool applyToAllGroupMember = 16;
  bool useAsDefaultCreateValue = 17;
  FullSetting group_setting = 18;
}

message GetClinicSettingRequest{
  int32 clinic_id = 1;
  optional string setting_group = 2;
}

message GetAllSettingRequest {
  int32 customer_id = 1;
}

message GetSettingByCustomerClinicRequest {
  int32 customer_id = 1;
  int32 clinic_id = 2;
}

message CreateClinicSettingRequest{
  CreateClinicSettingBody clinic_setting = 1;
  string clinic_id = 2;
  string user_id = 3;
}

message CreateClinicSettingBody{
  string setting_name = 1;
  string setting_description = 2;
  string setting_value = 3;
  string setting_type = 4;
  bool hasGroupSetting = 5;
  bool isGroupSetting = 6;
  bool useGroupSetting = 7;
  bool isRequiredSetting = 8;
  bool applyToAllGroupMember = 9;
  bool useAsDefaultCreateValue = 10;
  string setting_group = 11;
}

message CreateClinicSettingResponse{
  int32 setting_id = 1;
  string setting_name = 2;
  string setting_group = 3;
  string setting_description = 4;
  string setting_value = 5;
  string setting_type = 6;
  string setting_value_updated_time = 7;
  bool isActive = 8;
  bool hasGroupSetting = 9;
  bool isGroupSetting = 10;
  bool useGroupSetting = 11;
  bool isRequiredSetting = 12;
  int32 setting_level = 13;
  string setting_level_name = 14;
  int32 group_setting_id = 15;
  bool applyToAllGroupMember = 16;
  bool useAsDefaultCreateValue = 17;
}


message setting{
  int32 setting_id = 1;
  string setting_name = 2;
  string setting_description = 3;
  string setting_value = 4;
  string setting_type = 5;
}

message SettingDetail {
  string customer_id = 1;
  string clinic_id = 2;
  string setting_name = 3;
  string setting_value = 4;
  bool isActive = 5;
  bool hasGroupSetting = 6;
  bool isGroupSetting = 7;
  bool useGroupSetting = 8;
  bool isRequiredSetting = 9;
  int32 clinic_group_setting_id = 10;
  string setting_group = 11;
}

message EditCustomerClinicSettingsRequest {
  repeated SettingDetail settings = 1;  // Array of setting details
  string user_id = 2;
  string service_name = 3;
}

message EditCustomerClinicSettingsResponse{
  string status = 1;
  repeated SettingResponse settingResponses = 2;
}

message SettingResponse {
  string customer_id = 1;
  string clinic_id = 2;
  string setting_id = 3;
  string status = 4;  // "SUCCESS", "FAILED"
  string error_message = 5;  // Optional, included only when status is "FAILED"
}